# budget_simulation

./: README.md  pyproject.toml
examples/: README.ipynb  example.ipynb
src/budget_simulation_tool/: __init__.py
